  and the number of track log point loaded.
* Images can now be opened with GeoTag.  You can select one or more images in
  finder and then right click and select the "Open With" option.  GeoTag will
  be one of app choices.
* Images can be selected and the map can be panned/zoomed while saving images.
  Images locations can not be edited until the save is complete.
* (internal) Swift 4.2, Xcode 10

### Bug fixes

* undoing a location update on an image that did not have a previous location
  resulted in a location of lat: 0, lon: 0. This has been fixed to restore the
  image to its "no location assigned" state.
* undoing all actions did not clear the window modified flag causing a "please
  save" message when window was closed/application terminated.
* No more beachball when saving large number of images.  Multiple images
  are saved in parallel, but the save process can still be quite slow.
* If GeoTag (or your computer) crashed with files opened and one or more of the
  opened files was moved to a different folder GeoTag would crash on attempts
  to open the file.

## GeoTag 4.3

### New Features

* Add ability to sort the table of images by column.  Clicking on a column
  header will sort the table by the contents of that column.  Clicking again
  will change the sort direction.
* ExifTool version 10.94

### Bug Fixes

* handle the case where the same file name is used for two images located in
  different folders.
* remove GPS date and time stamps when a location is removed.

## GeoTag 4.2

### New Features

* Update GPS Date and Time tags when updating location.   GPS timestamps are
  in GMT.  The procedure assumes the date and time the image was taken was correct
  for the time zone.  If your camera was set to the wrong time zone or set to
  UTC/GMT the GPS timestamp will be incorrect.  This feature is only enabled when
  the 'Update GPS Date/Time stamps' button is checked in program Preferences.
  **This feature is only available on macOS 10.11 or later**