@@ -19,6 +19,9 @@
   be one of app choices.
 * Images can be selected and the map can be panned/zoomed while saving images.
   Images locations can not be edited until the save is complete.
+* The last 10 map searches are saved across program runs. When Clicking on the
+  search box saved search strings are indicated by a down arrow next to the
+  Q icon. Click on the arrow next to open the menu of saved search strings.
 * (internal) Swift 4.2, Xcode 10 (beta 4)
 
 ### Bug fixes
